<resources>
    <string name="app_name">Movie Film</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_preview_dark">Image Preview Dark</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="share_text">Saya membagikan Film %s</string>
    <string name="release">Release Year</string>
    <string name="favorite">Favorite</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="empty_favorite">No favorites yet</string>
    <string name="empty_favorite_movie_list">You don\'t have favorite movie.</string>
    <string name="empty_favorite_tv_show_list">You don\'t have favorite tv show.</string>

    <string name="toolbar_title_movie">Now Playing Movie</string>
    <string name="toolbar_title_tv_show">TV Show On The Air</string>
    <string name="floating_button">floating button</string>
    <string name="tab_title_movie">Favorite Movie</string>
    <string name="tab_title_tv_show">Favorite TV Show</string>
    <string name="tab_title_favorite">Favorite</string>
</resources>